fixed text overflow and added placeholder

--- a/css/common_style.css
+++ b/css/common_style.css
@@ -34,6 +34,14 @@ body {
     box-shadow: 0px 0px 15px #0000007f;
 }
 
+.text {
+    display: block;
+    width: 100px;
+    overflow: auto;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 #userinput {
     width: 45%;
 }
