--- a/css/fractionalcal.css
+++ b/css/fractionalcal.css
@@ -21,6 +21,9 @@ p {
     .clear {
         width: 20%;
     }
+    h1 {
+        font-size: 120%;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -37,5 +40,23 @@ p {
     }
     h1 {
         font-size: 120%;
+    }
+}
+
+@media screen and (max-width: 438px) {
+    * {
+        overflow: auto;
+    }
+    .calculate,
+    .clear {
+        font-size: 80%;
+        padding: 0px;
+    }
+    .calculate {
+        width: 60%;
+    }
+    h1 {
+        font-size: 120%;
+        display: inline-block;
     }
 }
